--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,10 @@
     <properties>
         <java.version>17</java.version>
         <spring-boot.version>3.2.3</spring-boot.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
-
+    
     <dependencies>
         <!-- Spring Boot (core, no web) -->
         <dependency>
